--- a/PredmetProjekat.BE/PredmetProjekat.WebApi/Properties/launchSettings.json
+++ b/PredmetProjekat.BE/PredmetProjekat.WebApi/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "api/artikal",
+      "launchUrl": "api/category",
       "applicationUrl": "https://localhost:7155;http://localhost:5155",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
