Service layer for Category, Brand, Product added

--- a/PredmetProjekat.BE/PredmetProjekat.WebApi/PredmetProjekat.WebApi.csproj
+++ b/PredmetProjekat.BE/PredmetProjekat.WebApi/PredmetProjekat.WebApi.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PredmetProjekat.Common\PredmetProjekat.Common.csproj" />
+    <ProjectReference Include="..\PredmetProjekat.Services\PredmetProjekat.Services.csproj" />
   </ItemGroup>
 
 </Project>
