--- a/PredmetProjekat.BE/PredmetProjekat.WebApi/appsettings.json
+++ b/PredmetProjekat.BE/PredmetProjekat.WebApi/appsettings.json
@@ -11,7 +11,7 @@
   },
   "Jwt": {
     "Issuer": "PredmetProjekatAPI",
-    "lifetime": 60,
-    "key": "ffc632ce-0053-4bab-8077-93a4d14caaab"
+    "Lifetime": 60,
+    "Key": "ffc632ce-0053-4bab-8077-93a4d14caaab"
   }
 }
