--- a/PredmetProjekat.FE/predmet-projekat/package.json
+++ b/PredmetProjekat.FE/predmet-projekat/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
